--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
       href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
       rel="stylesheet"
     />
-    <script src="scripts/templates/photographer.js" defer></script>
-    <script src="scripts/pages/index.js" defer></script>
     <title>Fisheye</title>
   </head>
   <body>
@@ -20,5 +18,6 @@
     <main id="main">
       <div class="photographer_section"></div>
     </main>
+    <script type="module" src="scripts/pages/index.js"></script>
   </body>
 </html>
