add condition if i clicked on heart icon total heart increase and the overlay for the modal

--- a/photographer.html
+++ b/photographer.html
@@ -15,6 +15,7 @@
     <title>Fisheye - photographe</title>
   </head>
   <body>
+    <div id="overlay" class="overlay"></div>
     <header>
       <a href="./index.html">
         <img src="assets/images/logo.png" class="logo" />
