--- a/photographer.html
+++ b/photographer.html
@@ -86,6 +86,18 @@
         </form>
       </div>
     </div>
+    <section>
+      <div id="imageModal" class="modal modal-pic">
+        <div class="modal-content">
+          <span id="closeImageModal" class="close">&times;</span>
+          <button id="prevBtn" class="modal-prev">&#10094;</button>
+          <h2 id="modalTitle" class="modal-title"></h2>
+          <div id="modalMedia" class="modal-media"></div>
+          <button id="nextBtn" class="modal-next">&#10095;</button>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="/scripts/utils/contactForm.js"></script>
     <script type="module" src="/scripts/pages/photographer.js"></script>
   </body>
