bug fix in the dropdown and set up the white overlay for carousel

--- a/photographer.html
+++ b/photographer.html
@@ -87,14 +87,23 @@
       </div>
     </div>
     <section>
+      <div id="overlay-pic" class="overlay-pic"></div>
       <div id="imageModal" class="modal modal-pic">
-        <div class="modal-content">
-          <span id="closeImageModal" class="close">&times;</span>
-          <button id="prevBtn" class="modal-prev">&#10094;</button>
-          <h2 id="modalTitle" class="modal-title"></h2>
-          <div id="modalMedia" class="modal-media"></div>
-          <button id="nextBtn" class="modal-next">&#10095;</button>
+        <div class="global-pic">
+          <span id="closeImageModal" class="close"
+            ><i class="fa-solid fa-x"></i
+          ></span>
+          <div class="modal-content">
+            <button id="prevBtn" class="modal-prev">
+              <i class="fa-solid fa-chevron-left chevron"></i>
+            </button>
+            <div id="modalMedia" class="modal-media"></div>
+            <button id="nextBtn" class="modal-next">
+              <i class="fa-solid fa-chevron-right chevron"></i>
+            </button>
+          </div>
         </div>
+        <h2 id="modalTitle" class="modalpic-title"></h2>
       </div>
     </section>
 
