--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
@@ -15,10 +15,10 @@
     <title>Fisheye - photographe</title>
   </head>
   <body>
-    <div id="overlay" class="overlay"></div>
     <header>
+      <div id="overlay" class="overlay"></div>
       <a href="./index.html">
-        <img src="assets/images/logo.png" class="logo" />
+        <img src="assets/images/logo.png" class="logo" alt="Logo du site" />
       </a>
     </header>
     <main id="main"></main>
@@ -31,11 +31,11 @@
             aria-label="Bouton de fermeture de la fenêtre de contact"
             id="modalCloseBtn"
           >
-            <img src="assets/icons/close.svg" />
+            <img src="assets/icons/close.svg" alt="logo fermeture modal" />
           </button>
         </header>
         <form class="modal-form" id="modalForm">
-          <label class="modal-label" for="firstName">Prénom</label><br />
+          <label class="modal-label" for="firstName">Prénom</label>
           <input
             class="modal-input"
             type="text"
@@ -45,7 +45,7 @@
             required
           /><br />
 
-          <label class="modal-label" for="lastName">Nom</label><br />
+          <label class="modal-label" for="lastName">Nom</label>
           <input
             class="modal-input"
             type="text"
@@ -55,7 +55,7 @@
             required
           /><br />
 
-          <label class="modal-label" for="email">E-mail</label><br />
+          <label class="modal-label" for="email">E-mail</label>
           <input
             class="modal-input"
             type="email"
@@ -64,8 +64,8 @@
             required
           /><br />
 
-          <label class="modal-label" for="message">Votre message</label><br />
-          <input
+          <label class="modal-label" for="message">Votre message</label>
+          <textarea
             class="modal-input modal-msg"
             type="text"
             id="message"
@@ -73,8 +73,8 @@
             minlength="10"
             maxlength="100"
             required
-          /><br />
-
+          ></textarea
+          ><br />
           <button
             class="button modal-submit"
             aria-label="Bouton de soumission du formulaire du modal de contact"
@@ -91,15 +91,15 @@
       <div id="imageModal" class="modal modal-pic">
         <div class="global-pic">
           <span id="closeImageModal" class="close"
-            ><i class="fa-solid fa-x"></i
-          ></span>
+            ><span class="fa-solid fa-x"></span>
+          </span>
           <div class="modal-content">
             <button id="prevBtn" class="modal-prev">
-              <i class="fa-solid fa-chevron-left chevron"></i>
+              <span class="fa-solid fa-chevron-left chevron"></span>
             </button>
             <div id="modalMedia" class="modal-media"></div>
             <button id="nextBtn" class="modal-next">
-              <i class="fa-solid fa-chevron-right chevron"></i>
+              <span class="fa-solid fa-chevron-right chevron"></span>
             </button>
           </div>
         </div>
